# Persona

./: .dockerignore  .env.example  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
Test/: persona.yaml
config/: README.md
config/models/: default.yaml
config/models/anthropic/: claude-opus-4.5.yaml  claude-sonnet-4.5.yaml
config/models/gemini/: gemini-2.5-flash.yaml
config/models/ollama/: defaults.yaml
config/models/openai/: gpt-4o-mini.yaml  gpt-4o.yaml
data/synthetic/: README.md
data/synthetic/interviews/: participant-001.md  participant-002.md  participant-004.md  participant-005.md
data/synthetic/mixed/: combined.csv  combined.json
data/synthetic/surveys/: user-feedback.csv
docs/: README.md
docs/assets/: README.md
docs/assets/img/: README.md
docs/assets/prompts/: README.md  getting-started-comic.md
docs/development/: LICENSE-COMPLIANCE.md  README.md  ai-contributions.md  testing.md
docs/development/decisions/: README.md
docs/development/implementation/: F-113-implementation-summary.md  README.md
docs/development/lineage/: README.md  acknowledgements.md  personazero-analysis.md  personazero-retrospective.md
docs/development/planning/: README.md
docs/development/process/: README.md  workflow.md
docs/development/research/: R-001-structured-llm-output.md  R-002-multi-provider-abstraction.md  R-003-persona-generation-methodology.md  R-004-token-counting-cost-estimation.md  R-005-cli-design-patterns.md  R-006-yaml-configuration-validation.md  R-007-prompt-templating.md  R-008-persona-validation-methodology.md  R-009-reasoning-capture.md  R-010-mvp-architecture.md  R-011-interactive-cli-libraries.md  R-012-tui-fullscreen-layout-patterns.md  R-013-local-model-assessment.md  R-014-shin-et-al-gap-analysis.md  R-015-quality-metrics-taxonomy.md  R-016-experiment-project-organisation.md  R-017-remote-data-ingestion.md  R-018-documentation-audit-and-automation.md  R-019-project-automation-implementation.md  R-020-webui-framework-selection.md  R-021-multi-user-collaboration.md  R-022-performance-benchmarking.md  R-023-caching-strategies.md  R-024-cross-provider-consistency.md  R-025-batch-processing-optimisation.md  R-026-error-recovery-degradation.md  R-027-plugin-development-patterns.md  R-028-model-fine-tuning-integration.md  R-029-bias-detection-cross-validation.md  R-030-analytics-usage-tracking.md  R-031-cloud-deployment-patterns.md  R-032-persona-evolution-versioning.md  R-033-multi-modal-input-support.md  R-034-realtime-collaborative-generation.md  README.md
docs/development/roadmap/: README.md
docs/development/testing/: README.md  synthetic_data.md
docs/explanation/: README.md  how-generation-works.md  privacy-considerations.md  reproducibility.md  template-architecture.md
docs/guides/: README.md  advanced-features.md  api-key-setup.md  choosing-provider.md  ci-cd-integration.md  conversation-scripts.md  custom-workflows.md  deployment.md  design-integration.md  error-handling.md  persona-generation.md  preparing-data.md  privacy-setup.md  rest-api.md  sdk-patterns.md  troubleshooting.md
docs/reference/: README.md  api.md  character-card-schema.md  cli-reference.md  configuration-reference.md  error-codes.md  model-cards.md  persona-schema.md  prompt-templates.md  provider-apis.md  quality-metrics.md
docs/research/: README.md  project-organisation.md
docs/tutorials/: 01-getting-started.md  02-understanding-output.md  03-data-formats.md  04-comparing-providers.md  05-building-library.md  06-validating-quality.md  07-external-datasets.md  README.md  sdk-quickstart.md
docs/use-cases/: README.md
docs/use-cases/briefs/: README.md  UC-001-generate-personas.md  UC-002-manage-experiments.md  UC-003-view-status.md  UC-004-compare-variations.md  UC-005-validate-personas.md  UC-006-large-datasets.md  UC-007-custom-format.md  UC-008-demo-mode.md  UC-009-empathy-mapping.md
examples/demo-project/: README.md  persona.yaml
examples/demo-project/data/: interviews.csv  survey-responses.json
examples/demo-project/templates/: developer-persona.md
experiments/: README.md
scripts/: pii_scan.sh  release.sh  setup.sh
src/: README.md
src/persona/: __init__.py
src/persona/api/: __init__.py  app.py  config.py  dependencies.py
src/persona/core/: __init__.py  async_utils.py  errors.py  platform.py
src/persona/sdk/: __init__.py  async_experiment.py  async_generator.py  client.py  config.py  exceptions.py  experiment.py  generator.py  models.py
src/persona/tui/: __init__.py  app.py  config.py  validators.py
src/persona/ui/: __init__.py  cli.py  completers.py  console.py  context.py  interactive.py  streaming.py
tests/: README.md  __init__.py  conftest.py
tests/data/expected_outputs/: metadata_schema.json  persona_schema_valid.json
tests/data/synthetic/: interviews_medium.csv  interviews_small.csv  survey_responses.json  user_feedback.md
tests/fixtures/: README.md  __init__.py  cli_helpers.py  data_samples.py  llm_mocks.py
tests/integration/: __init__.py  test_hybrid_pipeline.py  test_installation.py
tests/manual/: README.md  __init__.py  pii_scan_checklist.md  plugin_system_test_script.md  quality_metrics_test_script.md  v0.1.0_test_script.md  v0.2.0_smoke_test.md  v0.2.0_test_script.md  v0.3.0_smoke_test.md  v0.3.0_test_script.md  v0.4.0_test_script.md  v0.5.0_test_script.md  v0.6.0_test_script.md  v0.7.0_test_script.md  v0.8.0_test_script.md  v0.9.0_test_script.md  v1.0.0_test_script.md  v1.1.0_api_test_script.md  v1.1.0_async_test_script.md  v1.1.0_scripts_test_script.md  v1.1.0_sdk_test_script.md  v1.2.0_tui_test_script.md  v1.3.0_test_script.md  v1.4.0_test_script.md  v1.5.0_test_script.md  v1.6.0_test_script.md  v1.7.0_test_script.md  v1.8.0_test_script.md  v1.9.0_test_script.md  v1.9.5_test_script.md
tests/synthetic/: README.md
tests/unit/: __init__.py  test_package.py  test_sdk.py
(+860 files in other folders)
