[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona"
version = "1.11.0"
description = "Generate realistic user personas from your data using AI"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
authors = []
keywords = ["persona", "ux", "user-research", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "textual>=0.87.0",
]

[project.optional-dependencies]
async = [
    "aiofiles>=24.1.0",
]
tui = [
    "textual>=0.87.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.0.0",
]
privacy = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
]
security = [
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
academic = [
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "transformers>=4.36.0",
]
bias = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]
all = [
    "persona[async,api,privacy,dev,test,security,docs,academic,bias]",
]

[project.scripts]
persona = "persona.ui.cli:app"

[project.urls]
Homepage = "https://github.com/REPPL/Persona"
Documentation = "https://github.com/REPPL/Persona/tree/main/docs"
Repository = "https://github.com/REPPL/Persona"
Issues = "https://github.com/REPPL/Persona/issues"

# Plugin entry point groups
# Third-party plugins can register here to be discovered automatically
[project.entry-points."persona.formatters"]
# Example: html = "persona_html_formatter:HTMLFormatter"

[project.entry-points."persona.loaders"]
# Example: xlsx = "persona_xlsx_loader:XLSXLoader"

[project.entry-points."persona.providers"]
# Example: azure = "persona_azure_provider:AzureOpenAIProvider"

[project.entry-points."persona.validators"]
# Example: custom = "persona_custom_validator:CustomValidator"

[project.entry-points."persona.workflows"]
# Example: custom = "persona_custom_workflow:CustomWorkflow"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "real_api: marks tests requiring real API calls (deselect with '-m \"not real_api\"')",
]

[tool.coverage.run]
source = ["src/persona"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert warnings (used in tests)

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
